# ui-cookiecutter

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  cookiecutter.json  tox.ini
{{cookiecutter.repo_name}}/: .gitignore  .gitreview  .jshintrc  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  manage.py  package.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
{{cookiecutter.repo_name}}/doc/: Makefile  requirements.txt
{{cookiecutter.repo_name}}/doc/source/: conf.py  index.rst
{{cookiecutter.repo_name}}/releasenotes/source/: conf.py  index.rst
{{cookiecutter.repo_name}}/tools/: tox_install.sh
{{cookiecutter.repo_name}}/{{cookiecutter.module_folder}}/: version.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_folder}}/api/: client.py  rest_api.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_folder}}/enabled/: _90_{{cookiecutter.dashboard}}_{{cookiecutter.panel_group}}_panelgroup.py  _91_{{cookiecutter.dashboard}}_{{cookiecutter.panel_group}}_{{cookiecutter.panel}}s_panel.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_folder}}/test/: settings.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: karma.conf.js
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/api/: client.py  rest_api.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/enabled/: _90_{{cookiecutter.dashboard}}_{{cookiecutter.panel_group}}_panelgroup.py  _91_{{cookiecutter.dashboard}}_{{cookiecutter.panel_group}}_{{cookiecutter.panel}}s_panel.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/test/: settings.py
(+55 files in other folders)
